[package]
name = "doris"
version = "0.0.1-alpha"
license = "MPL-2.0"
authors = ["Guillaume W. Bres <guillaume.bressaix@gmail.com>"]
description = "DORIS RINEX file parsing and production"
homepage = "https://github.com/nav-solutions"
repository = "https://github.com/nav-solutions/doris"
keywords = ["geo", "gnss", "gps", "galileo"]
categories = ["science", "science::geo", "parsing"]
edition = "2021"
readme = "README.md"
exclude = [
    "data/*",
]

[package.metadata]
msrv = "1.82"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docrs", "--generate-link-to-definition"]

[features]
default = ["flate2"] # gzip files supported by default

[build-dependencies]
serde_json = { version = "1.0", features = ["preserve_order"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }

[dependencies]
num = "0.4"
strum = "0.26"
thiserror = "2"
num-derive = "0.4"
log = { version = "0.4", optional = true }
flate2 = { version = "1", optional = true }
bitflags = { version = "2.3", features = ["serde"] } 
hifitime = { version = "4.1", features = ["serde", "std"] }
gnss-rs = { version = "2.4", features = ["serde", "domes", "cospar"] }
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
flate2 = "1"
rand = "0.8.4"
serde_json = "1"
criterion = "0.5"
env_logger = "0.11"
